Implement custom authentication entry point and dynamic CORS configuration